# esg_bot

./: krx.csv  pyproject.toml
esg_chatbot/: cli.py
