[tool.poetry]
name = "esg_bot"
version = "0.1.0"
description = "ESG Bot is a chatbot that provides ESG evaluation and analysis services using Langchain."
authors = [
  "Park Jong Hyun <jonhpark7966@gmail.com>",
  "Jee Wan Gue <jeewangue@gmail.com>",
]
license = "UNLICENSED"
readme = "README.md"

homepage = "https://github.com/jeewangue/esg-bot"
repository = "https://github.com/jeewangue/esg-bot"

packages = [
  { include = "esg_bot", from = "." },
  { include = "esg_chatbot", from = "." },
]

scripts = { "esg_chatbot" = "esg_chatbot.cli:main" }

[tool.poetry.dependencies]
python = ">=3.11, <3.13"

finance-datareader = "^0.9.93"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
langchain-experimental = "^0.0.63"
langchain-openai = "^0.1.19"
langchain-pinecone = "^0.1.3"
langsmith = "^0.1.93"
pandas = "^2.2.2"
plotly = "^5.23.0"
python-dotenv = "^1.0.1"
streamlit = "^1.37.0"
streamlit-feedback = "^0.1.3"

[tool.poetry.group.dev.dependencies]
basedpyright = "^1.15.0"
black = { extras = ["d"], version = "^24.4.2" }
isort = "^5.13.2"
jupyterlab = "^4.2.4"
line-profiler = "^4.1.3"
memory-profiler = "^0.61.0"
pipx = "^1.6.0"
rope = "^1.13.0"
ruff = "^0.5.5"
types-pyyaml = "^6.0.12.20240724"
pandas-stubs = "^2.2.2.240603"

[tool.ruff]
line-length = 160
target-version = 'py311'
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W", "N", "B", "I", "NPY", "PL", "C90", "UP", "SIM", "RUF"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 12

[tool.black]
line-length = 160
target-version = ['py310', 'py311']

[tool.basedpyright]
include = ["esg_bot", "esg_chatbot"]
exclude = ["**/node_modules", "**/__pycache__"]
defineConstant = { DEBUG = true }

typeCheckingMode = "all"

reportMissingImports = true
reportMissingTypeStubs = true

pythonVersion = "3.11"
pythonPlatform = "Linux"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
